--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "windows98-theme",
   "displayName": "Windows98Theme",
   "description": "A Windows 98 inspired theme for VS Code.",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "publisher": "thounny",
   "engines": {
     "vscode": "^1.94.0"
@@ -13,9 +13,14 @@
   "contributes": {
     "themes": [
       {
-        "label": "Windows98Theme",
-        "uiTheme": "vs",
+        "label": "Windows98Theme (Light)",
+        "uiTheme": "vs",  
         "path": "./themes/Windows98Theme-color-theme.json"
+      },
+      {
+        "label": "Windows98Theme (Dark)",
+        "uiTheme": "vs-dark",  
+        "path": "./themes/Windows98Theme-dark-color-theme.json"
       }
     ]
   },
